# Base64_ImageConverter

./: .gitignore  INSTALL.md  LAUNCH_GUI.py  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  quick_setup.py  setup.py  start_gui.py  validate_project.py
base64_image_converter/: Base64_Converter_GUI.html  __init__.py  convertIMAGE_script.py  launch_gui.py  web_bridge.py
docs/: README.md  index.html
project/: MANIFEST.in  requirements.txt  setup.py
project/Inputs/: README.md
project/Outputs/: README.md
project/base64_image_converter/: Base64_Converter_GUI.html  __init__.py  convertIMAGE_script.py  launch_gui.py  web_bridge.py
project/docs/: CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUBLICATION_GUIDE.md  INSTALL.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.md  RELEASE_CHECKLIST.md
web-based_SimplifiedGUI/: LAUNCH_SimplifiedGUI.html  web-based_README.md
